crates/vexor-compiler/tests/golden/error/output/match_missing_arrow.err
parse error at line 2, column 1
  |
2 | let result = match r {
  | ^
invalid keyword 'export'